# coursework_2

./: main.py  pyproject.toml
classes_for_the_game/: basic_word.py  players.py
request_json/: utils.py
