[tool.poetry]
name = "coursework-2"
version = "0.1.0"
description = ""
authors = ["Hamanist <hamanist@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
art = "^6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
